15 March 2023 v495: New article: Crash text and title field are no longer shown when adding a new article. One can still set a custom crash text or title by editing the crash later. Fixed: An error occurred if the summary of an article was too long. This could happen if the spider inserted a too long text which could happen because javascript is not limited by the maxlength property of the input. Code: clone() function replaced with new structuredclone()

--- a/main.css
+++ b/main.css
@@ -226,14 +226,14 @@ h2, .pageSubTitleFont, .sectionTitle {
 }
 
 .editCrashPerson {
-  display:          inline-flex;
-  flex-direction:   row;
-  border:           1px solid #aaaaaa;
-  border-radius:    5px;
-  margin-top:       5px;
-  padding:          2px;
-  cursor:           pointer;
-  opacity:          0.7;
+  display: inline-flex;
+  flex-direction: row;
+  border: 1px solid #aaaaaa;
+  border-radius: 5px;
+  margin: 5px 3px 0 0;
+  padding: 2px;
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .editCrashPerson:hover {
